# hskonfidence

./: .gitignore  Main.hs  README.md  README.md~  hskonfidence.cabal  run.sh  testOut.txt
Hskonfidence/: Grammar.hs  Interpreter.hs  Lexer.hs  Parser.hs  Token.hs
Hskonfidence/Parser/: EBNFParsers.hs  GrammarParsers.hs  RealParser.hs
test/: test.c?
tests/: interpreterTest.cf  interpreterTest1.cf  interpreterTest2.cf  interpreterTest3.cf  lexerTests.c?  parserTest1.c?  parserTest2.cf
