Name:               hskonfidence
Version:            1.0.0
Author:             Matt Hink
Maintainer:         mhink1103@gmail.com
Homepage:           http://www.github.com/mhink/hskonfidence
Synopsis:           Confidence? interpreter written in Haskell
Build-type:         Simple
Stability:          Experimental
Cabal-Version:      >= 1.2

Source-repository head
  type:             git
  location:         http://github.com/mhink/hskonfidence.git

Executable hskonf
  main-is:          Main.hs
  other-modules:    Hskonfidence.Lexer,
                    Hskonfidence.Token,
                    Hskonfidence.Grammar,
                    Hskonfidence.Parser,
                    Hskonfidence.Interpreter,
                    Hskonfidence.Parser.RealParser,
                    Hskonfidence.Parser.EBNFParsers,
                    Hskonfidence.Parser.GrammarParsers
  build-depends:    base,
                    mtl,
                    bytestring,
                    ghc-binary,
                    array,
                    containers
